# numpy-ml-from-scratch

./: .gitignore  README.md  pyproject.toml
core/: linear_regression.py  logistic_regression.py
experiments/: numpy_warmup.py
tests/: integration_test.py  integration_test_linear_regression.py  test_regularization.py
