[project]
name = "numpy-ml-engine"
version = "0.1.0"
description = "Classical Machine Learning algorithms implemented from scratch using NumPy."
authors = [
    {name = "Riki Sutiaman"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)"
]
